# SCARA

Brain_PC/: Brain.py  mqtt_client.py
Challenge/: CMakeLists.txt  platformio.ini  sdkconfig.defaults
Challenge/lib/AS5600/: AS5600.cpp  CMakeLists.txt
Challenge/lib/AS5600/include/: AS5600.h
Challenge/lib/DriverStepper/: CMakeLists.txt  DriverStepper.cpp
Challenge/lib/DriverStepper/include/: DriverStepper.h
Challenge/lib/Encoders/: CMakeLists.txt  Encoders.cpp
Challenge/lib/Encoders/include/: Encoders.h
Challenge/lib/Gripper/: CMakeLists.txt  Gripper.cpp  Gripper.h
Challenge/lib/HBridge/: CMakeLists.txt  HBridge.cpp
Challenge/lib/HBridge/include/: HBridge.h
Challenge/lib/MotorAngles/include/: MotorAngles.h
Challenge/lib/MotorManager/: CMakeLists.txt  MotorManager.cpp
Challenge/lib/MotorManager/include/: MotorManager.h
Challenge/lib/MqttClient/: CMakeLists.txt  MqttClient.cpp
Challenge/lib/MqttClient/include/: MqttClient.h
Challenge/lib/PIDcontroller/: CMakeLists.txt  PIDcontroller.cpp
Challenge/lib/PIDcontroller/include/: PIDcontroller.h
Challenge/lib/QuadratureEncoder/: CMakeLists.txt  QuadratureEncoder.cpp
Challenge/lib/SimpleGPIO/: CMakeLists.txt  SimpleGPIO.cpp
Challenge/lib/SimplePWM/: CMakeLists.txt  SimplePWM.cpp
Challenge/lib/SimplePWM/include/: SimplePWM.h
Challenge/lib/Stepper/: CMakeLists.txt  Stepper.cpp  Stepper.h
Challenge/main/: CMakeLists.txt  definitions.h  idf_component.yml  main.cpp
Challenge/test/Pruebitas_chidas/: AS5600_INTEGRATION_GUIDE.md  AS5600_USAGE_EXAMPLES.cpp  Pruebas..cpp
FinalChallenge/: CV.py  Kinematics.py  MainBrain.py  import cv2.py  robot_controller.py
GUI/: GUI.py  controller.py  fake_esp.py  mqtt_client.py  test_mqtt.py  test_mqtt_feedback.py  tutorial_grid.txt
